Change max-width of c-window, fix spacing of c-post-preview & c-work-preview, add ACF to work view

--- a/stylus/components/shadowbox.styl
+++ b/stylus/components/shadowbox.styl
@@ -20,11 +20,4 @@
   .c-shadowbox__inner
     background-color MAINCOLOR
     color white
-.c-shadowbox:active
-  top 0
-  left 0
-  margin 1rem 0 1rem 1rem
-  padding 0
-  .c-shadowbox__inner
-    margin 0
 
