--- a/stylus/components/window.styl
+++ b/stylus/components/window.styl
@@ -5,8 +5,7 @@
 \*********************************/
 
 .c-window
-  width 50rem
-  max-width 100%
+  max-width 50rem
   border-radius 1rem 1rem 0 0
   spacer()
   background-color white
