--- a/stylus/templates/home.styl
+++ b/stylus/templates/home.styl
@@ -17,11 +17,14 @@
       height 400px
 .t-post-preview
   max-width 20rem
+  margin-top 3rem
+  margin-bottom 2rem
+.t-post-preview + .t-post-preview
+  margin-top 0
 
 .t-work-preview
   padding 1rem
   padding-top 2rem
-  margin-bottom 1rem
   & > a
     margin 0 auto
     max-width 100%
